docs: create safety management process description
Closes: #333

--- a/docs/process/standards/iso26262.rst
+++ b/docs/process/standards/iso26262.rst
@@ -12,6 +12,8 @@
    # SPDX-License-Identifier: Apache-2.0
    # *******************************************************************************
 
+.. _standard_iso26262:
+
 ISO 26262
 ---------
 
