process: update verification work product definitions
Implements: #320
Signed-off-by: Philipp Ahmann <philipp.ahmann@de.bosch.com>

--- a/docs/process/standards/iso26262/iso26262.rst
+++ b/docs/process/standards/iso26262/iso26262.rst
@@ -1204,7 +1204,7 @@ Part 8: Supporting processes
 
     .. std_req:: support_49
        :id: std_req__iso26262__support_49
-
+       :status: valid
 
     .. std_req:: support_50
        :id: std_req__iso26262__support_50
