docs: update standard pie charts (#714)
* docs: update standard pie charts

- requirements and workproduct overview is available
- for every standard separately
- include iso21434 in charts

--- a/docs/process/standards/iso26262/iso26262.rst
+++ b/docs/process/standards/iso26262/iso26262.rst
@@ -1611,3 +1611,6 @@ Part 9: Automotive safety integrity level (ASIL)-oriented and safety-oriented an
    but the related requirements are not included as these are not needed to be covered.
 
    A mapping table to ISO 26262 numbering can be provided by SCORE project on request for every holder of a ISO 26262 standard license.
+
+.. needextend:: "standards/iso26262" in docname
+   :+tags: iso26262
