--- a/process/standards/iso26262/iso26262.rst
+++ b/process/standards/iso26262/iso26262.rst
@@ -1615,5 +1615,5 @@ Part 9: Automotive safety integrity level (ASIL)-oriented and safety-oriented an
    All workproducts of the relevant parts are included in the list to enable the documentation of the project wide tailoring,
    but the related requirements are not included as these are not needed to be covered.
 
-.. needextend:: "standards/iso26262" in docname
+.. needextend:: docname is not None and "process/standards/iso26262" in docname
    :+tags: iso26262
